# Moth

./: CREDITS  ChangeLog  Makefile  Makefile.am  Makefile.in  README  THANKS  TODO  bootstrap.sh  configure.ac  gmoth.c  goth.c  libmoth.c  libmoth.h  moth-common.c  moth-common.h  moth.c
PLUGIN/: REQ  auto  options
config/: config.h.in
src/: Makefile.am  common.c  common.h  connect4.c  gconnect4.c  gmoth.c  libc4.c  libc4.h  libmoth.c  libmoth.h  moth.c
